--- a/src/components/alert.css
+++ b/src/components/alert.css
@@ -5,7 +5,7 @@
     border-radius: 5px;
     border: none;
     font-size: 18px;
-    color: #282D35;
+    color: #d3f1fa;
     box-sizing: content-box;
     margin-left: 10px;
     cursor: pointer;
@@ -14,4 +14,8 @@
   
   .button:focus {
     outline: none;
+  }
+
+  .custom-hover :hover {
+    background-color: #ecf0f1;
   }
